--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="content">
 			<div id="code">
 
-				<span class="space"/><span class="comments">婷婷，现在是2024年12月10日凌晨</span><br />	
+				<span class="space"/><span class="comments">琦琦，现在是2024年12月10日凌晨</span><br />	
 				<span class="space"/><span class="comments">这个时候你应该睡着啦，我在桌子前</span><br />
 				<span class="space"/><span class="comments">我写下了这篇独白</span><br />
 				<span class="space"/><span class="comments">别嫌弃这个网站简陋，</span><br />	
